--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@auth0/nextjs-auth0": "^3.6.0",
+    "@auth0/nextjs-auth0": "^3.8.0",
+    "@aws-sdk/client-dynamodb": "^3.840.0",
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/lib-dynamodb": "^3.840.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@google-cloud/speech": "^6.7.0",
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -21,6 +25,7 @@
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +34,7 @@
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-query": "^3.39.3",
